# CMake-Demo

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  ExampleConfig.cmake.in
example/cmake/: Dependencies.cmake
example/src/: CMakeLists.txt  example.cc
example/src/utils/: CMakeLists.txt  image.cc  torch_utils.cc
example/test/: CMakeLists.txt
include/example/: example.h
src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/example/utils/: image.cc  image.h  torch_utils.cc  torch_utils.h
test/: CMakeLists.txt  test.cc
